@@ -17,6 +17,7 @@
 
 #include "eixTk/assert.h"
 #include "eixTk/dialect.h"
+#include "eixTk/eixarray.h"
 #include "eixTk/eixint.h"
 #include "eixTk/formated.h"
 #include "eixTk/i18n.h"
@@ -155,20 +156,22 @@ bool AnsiColor::initcolor(const string& str, string *errtext) {
 					col += (bgFirst - fgFirst);
 				}
 			}
-			static CONSTEXPR const unsigned int kLen = 10;
-			char buf[kLen];
+			eix::array<char, 10> buffer;
 			if(iscol < 0) {
-				snprintf(buf, kLen, ";%d;5;%s", static_cast<int>(col), curr.c_str());
+				snprintf(buffer.data(), buffer.size(),
+					";%d;5;%s",
+					static_cast<int>(col), curr.c_str());
 			} else {
-				snprintf(buf, kLen, ";%d", static_cast<int>(col));
+				snprintf(buffer.data(), buffer.size(),
+					";%d", static_cast<int>(col));
 			}
 			if(iscol == 0) {
-				markers.append(buf);
+				markers.append(buffer.data());
 			} else if(!havecol) {
-				fg.assign(buf);
+				fg.assign(buffer.data());
 				havecol = true;
 			} else if(likely(bg.empty())) {
-				bg.assign(buf);
+				bg.assign(buffer.data());
 			} else {
 				if(errtext != NULLPTR) {
 					*errtext = eix::format(_("more than two colors specified in \"%s\"")) % str;
@@ -239,26 +242,25 @@ static CalcType transcalc(CalcType color) {
 }
 
 void AnsiColor::AnsiPalette() {
-	static CONSTEXPR const unsigned int kLen = 40;
-	char buf[kLen];
+	eix::array<char, 40> buffer;
 	for(CalcType red(0); red < 6; ++red) {
 		for(CalcType green(0); green < 6; ++green) {
 			for(CalcType blue(0); blue < 6; ++blue) {
-				snprintf(buf, kLen,
+				snprintf(buffer.data(), buffer.size(),
 					"\x1B]4;%d;rgb:%2.2x/%2.2x/%2.2x\x1B\\",
 					static_cast<int>(16 + (red * 36) + (green * 6) + blue),
 					static_cast<int>(transcalc(red)),
 					static_cast<int>(transcalc(green)),
 					static_cast<int>(transcalc(blue)));
-				eix::print() % buf;
+				eix::print() % buffer.data();
 			}
 		}
 	}
 	for(CalcType gray(0); gray < 24; ++gray) {
 		int trans(static_cast<int>((gray * 10) + 8));
-		snprintf(buf, kLen,
+		snprintf(buffer.data(), buffer.size(),
 			"\x1B]4;%d;rgb:%2.2x/%2.2x/%2.2x\x1B\\",
 			static_cast<int>(232 + gray), trans, trans, trans);
-		eix::print() % buf;
+		eix::print() % buffer.data();
 	}
 }
